# FAT12-reader-in-C

./: 0002want.dmg  CMakeLists.txt  README.md  cluster.c  cluster.h  dir.c  dir.h  disk.c  disk.h  file.c  file.h  file_reader.c  file_reader.h  hot_fat12_volume.img  libs.h  main.c  picture_fat12_volume.img  utilities.c  volume.c  volume.h
